--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Flask = "^2.3.2"
+google-cloud-storage = "2.10.0"
+mysql-connector-python = "8.0.33"
+xds-protos = "^0.0.11"
 
 [tool.poetry.dev-dependencies]
 
