--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Flask = "^2.3.2"
 google-cloud-storage = "2.10.0"
 mysql-connector-python = "8.0.33"
 xds-protos = "^0.0.11"
+SQLAlchemy = "2.0.18"
 
 [tool.poetry.dev-dependencies]
 
