--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ google-cloud-storage = "2.10.0"
 mysql-connector-python = "8.0.33"
 xds-protos = "^0.0.11"
 SQLAlchemy = "2.0.18"
+pymysql = "1.1.0"
 
 [tool.poetry.dev-dependencies]
 
