--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ mysql-connector-python = "8.0.33"
 xds-protos = "^0.0.11"
 SQLAlchemy = "2.0.18"
 pymysql = "1.1.0"
+pandas = "2.0.3"
 
 [tool.poetry.dev-dependencies]
 
