--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ xds-protos = "^0.0.11"
 SQLAlchemy = "2.0.18"
 pymysql = "1.1.0"
 pandas = "2.0.3"
+Flask-Login = "0.6.2"
 
 [tool.poetry.dev-dependencies]
 
