--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ SQLAlchemy = "2.0.18"
 pymysql = "1.1.0"
 pandas = "2.0.3"
 Flask-Login = "0.6.2"
+Flask-Script = "2.0.6"
+Flask-SQLAlchemy = "^3.0.5"
 
 [tool.poetry.dev-dependencies]
 
