--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pandas = "2.0.3"
 Flask-Login = "0.6.2"
 Flask-Script = "2.0.6"
 Flask-SQLAlchemy = "^3.0.5"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
