--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -18,6 +18,7 @@ Flask-Script = "2.0.6"
 Flask-SQLAlchemy = "^3.0.5"
 python-dotenv = "^1.0.0"
 flask-cors = "^4.0.0"
+flask-socketio = "^5.3.6"
 
 [tool.poetry.dev-dependencies]
 
